#108 fav Icon is now reactive
