# Backend/src/main/resources/openapi.yaml
@@ -56,18 +56,18 @@ paths:
               $ref: '#/components/headers/Access-Control-Allow-Origin'
         '400':
           description: Invalid Data
-  /favourites/{favId}:
+  /favourites/{id}:
     get:
       tags: 
         - favourites
-      summary: Find Favourite by ID
+      summary: Find Favourite by Template ID
       description: Returns a single Favourite
       security:
         - BearerAuth: []
       parameters:
-        - name: favId
+        - name: id
           in: path
-          description: ID of Favourite to return
+          description: ID of a form template, that might be a Favorite
           required: true
           schema:
             type: string
@@ -89,9 +89,9 @@ paths:
       summary: delete a Favourite by ID
       description: delete a Favourite by ID for the requesting User
       parameters:
-        - name: favId
+        - name: id
           in: path
-          description: ID of favourite to return
+          description: ID of favourite to delete
           required: true
           schema:
             type: string
